Configured Package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.0.0",
     "amazon-clone": "file:",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "css-loader": "^7.1.2",
     "firebase": "^10.13.2",
     "jwt-decode": "^4.0.0",
+    "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.4.1",
