Configured Package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.0.0",
+    "@types/react": "^18.3.21",
+    "ajv": "^8.17.1",
     "amazon-clone": "file:",
     "autoprefixer": "^10.4.21",
     "axios": "^1.7.7",
@@ -22,6 +23,7 @@
     "jwt-decode": "^4.0.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
+    "postcss-selector-parser": "^7.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.4.1",
@@ -30,6 +32,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "typescript": "^4.9.5",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
