--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "amazon-clone",
+  "name": "BuyNest",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +21,7 @@
     "css-loader": "^7.1.2",
     "firebase": "^10.13.2",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.513.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "postcss-selector-parser": "^7.1.0",
@@ -32,6 +33,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "typescript": "^4.9.5",
     "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
